<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="@string/app_name" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.DetailFragment">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/info_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardBackgroundColor="?attr/colorPrimary"
            app:cardCornerRadius="25dp"
            app:contentPadding="20dp"
            app:strokeWidth="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/app_version_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    tools:text="App Version: 1.4" />

                <TextView
                    android:id="@+id/android_version_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    tools:text="Android Viesion: 13" />

                <TextView
                    android:id="@+id/device_id_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    tools:text="Device ID: 13" />

                <TextView
                    android:id="@+id/token_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    tools:text="Token: 32452trt54gtfdstgfes43" />

                <TextView
                    android:id="@+id/phone1_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    tools:text="Phone1: 79003735831" />

                <TextView
                    android:id="@+id/phone2_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    tools:text="Phone2: 79003735831" />

                <TextView
                    android:id="@+id/ping_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    tools:text="Ping: 13" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/status_service_card_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    app:cardCornerRadius="25dp"
                    app:contentPadding="10dp"
                    app:strokeWidth="0dp"
                    tools:cardBackgroundColor="@color/green">

                    <TextView
                        android:id="@+id/status_service_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        tools:text="работате" />
                </androidx.cardview.widget.CardView>


            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/permission_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permission"
            android:layout_marginHorizontal="20dp"

            app:layout_constraintTop_toBottomOf="@id/battery_button" />

        <Button
            android:id="@+id/battery_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/battery"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@id/info_card_view"/>

        <ScrollView
            android:id="@+id/log_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/black"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            app:layout_constraintBottom_toTopOf="@id/log_button_linear_layout"
            app:layout_constraintTop_toBottomOf="@id/permission_button">

            <TextView
                android:id="@+id/log_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="11sp"
                tools:text="Log dfsdf fds fds" />
        </ScrollView>

        <LinearLayout
            android:id="@+id/log_button_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/share_log_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="20dp"

                android:text="@string/share"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/clear_log_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="20dp"

                android:text="@string/clear"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
